# open-zkx

./: .pre-commit-config.yaml  README.md  WORKSPACE.bazel  lines.txt
bazel/: zkx.bzl  zkx_cc.bzl  zkx_deps.bzl  zkx_deps2.bzl  zkx_deps3.bzl
docs/: fusion-passes.md  gpu-compilation-pipeline.md  tiling-and-memory.md
examples/: README.md  run.sh
examples/field_arithmetic/: BUILD.bazel  add_mul.stablehlo.mlir  reduction.input.json  reduction.stablehlo.mlir
examples/fusion_showcase/: broadcast_fusion.input.json  broadcast_fusion.stablehlo.mlir  concatenate_fusion.input.json  concatenate_fusion.stablehlo.mlir  input_fusion.input.json  input_fusion.stablehlo.mlir  multi_output_fusion.input.json  multi_output_fusion.stablehlo.mlir  scatter_fusion.input.json  scatter_fusion.stablehlo.mlir  transpose_fusion.input.json  transpose_fusion.stablehlo.mlir
examples/poseidon2_babybear/: poseidon2_permutation.input.json  poseidon2_permutation.stablehlo.mlir
xla/tsl/cuda/: BUILD.bazel  stub.bzl
xla/tsl/lib/math/: BUILD.bazel
xla/tsl/platform/: BUILD.bazel  build_config_root.bzl  dso_loader.cc  dso_loader.h  env.cc  path_unittest.cc  thread_pool.cc
xla/tsl/util/: BUILD.bazel
zkx/: BUILD.bazel  debug_options_flags.cc  executable_run_options.h  layout_util.h  literal.cc  literal.h  literal_util.cc  literal_util.h  primitive_util.cc  primitive_util.h  shape.cc  shape_util.cc  shape_util.h  status_macros.cc  types.h  util.cc  util_unittest.cc  window_util.cc  window_util.h  zkx.proto  zkx_data.proto
zkx/backends/: BUILD.bazel
zkx/backends/gpu/codegen/: BUILD.bazel  fusions.cc  fusions.h
zkx/backends/gpu/runtime/: BUILD.bazel  command_buffer_cmd.cc  command_buffer_cmd.h  command_buffer_cmd_emitter.cc  command_buffer_thunk.cc  command_buffer_thunk_unittest.cc  copy_thunk.cc  copy_thunk.h  dynamic_slice_thunk.cc  kernel_thunk.cc  kernel_thunk.h  sequential_thunk.cc  thunk.cc  thunk.h  while_thunk.cc
zkx/codegen/: emitter_loc_op_builder.cc  emitter_loc_op_builder.h
zkx/codegen/emitters/: BUILD.bazel  elemental_hlo_to_mlir.cc
zkx/codegen/emitters/ir/: BUILD.bazel
zkx/codegen/emitters/transforms/: flatten_tensors.cc
zkx/codegen/tools/: BUILD.bazel  emitters_opt.cc
zkx/hlo/analysis/: BUILD.bazel  hlo_dataflow_analysis.cc  hlo_dataflow_analysis.h  hlo_ordering.cc  logical_buffer_analysis.cc  logical_buffer_analysis.h  tuple_points_to_analysis.cc  tuple_points_to_analysis.h
zkx/hlo/builder/: BUILD.bazel  zkx_builder.cc  zkx_builder.h  zkx_builder_unittest.cc
zkx/hlo/ir/: BUILD.bazel  backend_config_unittest.cc  dfs_hlo_visitor.h  dfs_hlo_visitor_with_default.h  hlo_computation.cc  hlo_computation.h  hlo_instruction.cc  hlo_instruction.h  hlo_instructions.cc  hlo_instructions.h  hlo_module.cc  hlo_module.h  hlo_opcode.h
zkx/hlo/pass/: BUILD.bazel  hlo_pass_pipeline.cc  hlo_pass_pipeline.h
zkx/hlo/transforms/: BUILD.bazel
zkx/hlo/transforms/simplifiers/: BUILD.bazel  hlo_cse.cc  hlo_dce.cc  hlo_dce_unittest.cc  hlo_memory_scheduler.cc
zkx/hlo/translate/mhlo_to_hlo/: BUILD.bazel  attribute_exporter.cc  layout_util.cc  layout_util.h  mlir_hlo_to_hlo.cc  operator_writer_gen.cc  type_to_shape.cc  type_to_shape_unittest.cc
zkx/hlo/utils/: BUILD.bazel  hlo_live_range.cc  hlo_query.cc  hlo_query.h
zkx/mlir/: mlir_utils.cc
zkx/mlir_hlo/analysis/: shape_component_analysis.cc
zkx/mlir_hlo/mhlo/IR/: BUILD.bazel  hlo_ops.cc  hlo_ops.h  hlo_ops.td  hlo_ops_common.td
zkx/mlir_hlo/mhlo/transforms/: map_stablehlo_to_hlo_op.h
zkx/mlir_hlo/mhlo/utils/: type_conversion.cc
zkx/pjrt/: BUILD.bazel  mlir_to_hlo.cc
zkx/pjrt/distributed/: BUILD.bazel  key_value_store_interface.h
zkx/service/: BUILD.bazel  backend.cc  backend.h  buffer_assignment.cc  buffer_assignment.h  buffer_value.h  call_graph.cc  call_inliner.cc  compiler.h  copy_insertion.cc  dump.cc  hlo.proto  hlo_buffer.h  hlo_cost_analysis.cc  hlo_cost_analysis.h  hlo_execution_profile.cc  hlo_execution_profile.h  hlo_module_config.cc  hlo_module_config.h  hlo_module_util.cc  hlo_runner.cc  hlo_runner.h  hlo_runner_interface.cc  hlo_runner_interface.h  hlo_value.cc  hlo_verifier.cc  hlo_verifier.h  instruction_fusion.cc  instruction_fusion.h  llvm_compiler.cc  logical_buffer.cc  pattern_matcher.h  platform_util.cc  platform_util.h  shape_inference.cc  shape_inference.h
zkx/service/gpu/: BUILD.bazel  backend_configs.proto  buffer_sharing.cc  build_defs.bzl  compile_module_to_llvm_ir.cc  execution_stream_assignment.cc  execution_stream_assignment.h  fusion_pipeline.cc  fusion_pipeline.h  gpu_compiler.cc  gpu_compiler.h  gpu_executable.cc  gpu_executable.h  gpu_executable_run_options.cc  gpu_executable_run_options.h  gpu_fusible.cc  gpu_hlo_schedule.cc  gpu_hlo_schedule.h  gpu_memory_space_assignment.h  gpu_transfer_manager.cc  gpu_transfer_manager.h  hlo_fusion_analysis.cc  hlo_fusion_analysis.h  ir_emission_utils.cc  ir_emission_utils.h  ir_emitter.cc  ir_emitter.h  ir_emitter_context.h  ir_emitter_unnested.cc  ir_emitter_unnested.h  kernel_reuse_cache.h  launch_dimensions.cc  nvptx_compiler.cc  prepare_hlo_for_ir_emitting_pipeline.cc  resource_requests.cc  resource_requests.h  stream_executor_util.cc  stream_executor_util.h
zkx/service/gpu/llvm_gpu_backend/: gpu_backend_lib.cc  nvptx_backend.cc
zkx/service/gpu/model/: BUILD.bazel  coalescing_analysis.cc  coalescing_analysis.h  gpu_hlo_cost_analysis.cc  gpu_hlo_cost_analysis.h
zkx/service/gpu/transforms/: BUILD.bazel  fusion_wrapper.cc  layout_assignment.cc  layout_assignment.h  multi_output_fusion.cc  priority_fusion.cc  priority_fusion.h
zkx/stream_executor/: BUILD.bazel  build_defs.bzl  stream_executor.h
zkx/stream_executor/cuda/: BUILD.bazel  assemble_compilation_provider.cc  cuda_executor.cc  cuda_executor.h  cuda_platform.cc  cuda_stream.cc  nvjitlink_support.cc
zkx/stream_executor/gpu/: BUILD.bazel  gpu_command_buffer_unittest.cc  gpu_executor_unittest.cc  gpu_kernel_unittest.cc
zkx/stream_executor/host/: BUILD.bazel
zkx/tools/: BUILD.bazel
zkx/tools/stablehlo_runner/: BUILD.bazel  stablehlo_runner_main.cc  stablehlo_runner_test.cc
(+10 files in other folders)
