# Copyright 2025 The ZKX Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

load("//bazel:zkx_cc.bzl", "zkx_cc_library")

package(default_visibility = ["//visibility:public"])

zkx_cc_library(
    name = "zkx_builder",
    srcs = ["zkx_builder.cc"],
    hdrs = ["zkx_builder.h"],
    deps = [
        ":zkx_computation",
        "//xla/tsl/platform:errors",
        "//xla/tsl/platform:statusor",
        "//zkx:array",
        "//zkx:array2d",
        "//zkx:array3d",
        "//zkx:comparison_util",
        "//zkx:literal",
        "//zkx:literal_util",
        "//zkx:shape_util",
        "//zkx:status_macros",
        "//zkx:util",
        "//zkx:zkx_data_cc_proto",
        "//zkx/hlo/ir:hlo",
        "//zkx/hlo/ir:hlo_opcode",
        "//zkx/service:hlo_cc_proto",
        "//zkx/service:shape_inference",
        "@com_google_absl//absl/algorithm:container",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/functional:function_ref",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/log:vlog_is_on",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:span",
    ],
)

zkx_cc_library(
    name = "zkx_computation",
    srcs = ["zkx_computation.cc"],
    hdrs = ["zkx_computation.h"],
    deps = [
        "//zkx:shape_util",
        "//zkx:status_macros",
        "//zkx/service:hlo_cc_proto",
        "@com_google_absl//absl/status:statusor",
    ],
)
