# Copyright 2026 The ZKX Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================*/

load("@local_config_cuda//cuda:build_defs.bzl", "if_cuda_is_configured")
load("//bazel:zkx_cc.bzl", "zkx_cc_binary", "zkx_cc_library", "zkx_cc_unittest")

package(default_visibility = ["//visibility:public"])

zkx_cc_library(
    name = "stablehlo_utils",
    srcs = ["stablehlo_utils.cc"],
    hdrs = ["stablehlo_utils.h"],
    deps = [
        "//xla/tsl/platform:statusor",
        "//zkx:debug_options_flags",
        "//zkx/hlo/ir:hlo",
        "//zkx/mlir/utils:error_util",
        "//zkx/pjrt:mlir_to_hlo",
        "@com_google_absl//absl/status",
        "@llvm-project//mlir:IR",
        "@llvm-project//mlir:Parser",
        "@llvm-project//mlir:Support",
        "@prime_ir//prime_ir/Dialect/EllipticCurve/IR:EllipticCurve",
        "@prime_ir//prime_ir/Dialect/Field/IR:Field",
        "@stablehlo//stablehlo/dialect:register",
    ],
)

# Runtime deps needed for GPU execution.
RUNNER_RUNTIME_DEPS = [
    "//zkx/backends/gpu/runtime:command_buffer_cmd",
    "//zkx/backends/gpu/runtime:command_buffer_cmd_emitter",
    "//zkx/backends/gpu/runtime:command_buffer_thunk",
    "//zkx/service:gpu_plugin",
    "//zkx/service/gpu:gpu_compiler",
]

zkx_cc_binary(
    name = "stablehlo_runner_main",
    srcs = ["stablehlo_runner_main.cc"],
    force_exceptions = True,
    deps = [
        ":stablehlo_utils",
        "//xla/tsl/platform:env",
        "//xla/tsl/platform:errors",
        "//xla/tsl/platform:statusor",
        "//xla/tsl/util:command_line_flags",
        "//zkx:debug_options_flags",
        "//zkx:literal",
        "//zkx:literal_util",
        "//zkx:primitive_util",
        "//zkx:shape_util",
        "//zkx:status_macros",
        "//zkx:zkx_data_cc_proto",
        "//zkx/hlo/ir:hlo",
        "//zkx/service:hlo_runner",
        "//zkx/service:platform_util",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@nlohmann_json//:json",
    ] + RUNNER_RUNTIME_DEPS + if_cuda_is_configured([
        "//zkx/stream_executor/cuda:cuda_platform",
    ]),
)

zkx_cc_unittest(
    name = "stablehlo_runner_test",
    size = "large",
    srcs = ["stablehlo_runner_test.cc"],
    data = [
        "//examples/fusion_showcase:mlir_files",
        "//examples/poseidon2_babybear:mlir_files",
    ],
    deps = [
        ":stablehlo_utils",
        "//xla/tsl/platform:env",
        "//xla/tsl/platform:errors",
        "//xla/tsl/platform:fingerprint",
        "//xla/tsl/platform:path",
        "//xla/tsl/platform:statusor",
        "//xla/tsl/platform:test_util",
        "//zkx:literal",
        "//zkx:literal_util",
        "//zkx/hlo/ir:hlo",
        "//zkx/service:hlo_runner",
        "//zkx/service:platform_util",
        "@com_google_absl//absl/strings",
        "@llvm-project//mlir:IR",
    ] + RUNNER_RUNTIME_DEPS + if_cuda_is_configured([
        "//zkx/stream_executor/cuda:cuda_platform",
    ]),
)
