# Copyright 2025 The ZKX Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

load("//bazel:zkx_cc.bzl", "zkx_cc_library")

package(default_visibility = ["//visibility:public"])

zkx_cc_library(
    name = "hlo_cse",
    srcs = ["hlo_cse.cc"],
    hdrs = ["hlo_cse.h"],
    deps = [
        "//xla/tsl/platform:errors",
        "//zkx:literal",
        "//zkx:shape_util",
        "//zkx/hlo/ir:hlo",
        "//zkx/hlo/pass:hlo_pass_interface",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/status:statusor",
    ],
)

zkx_cc_library(
    name = "hlo_dce",
    srcs = ["hlo_dce.cc"],
    hdrs = ["hlo_dce.h"],
    deps = [
        "//xla/tsl/platform:errors",
        "//xla/tsl/platform:statusor",
        "//zkx:shape_util",
        "//zkx:util",
        "//zkx/base:logging",
        "//zkx/hlo/ir:hlo",
        "//zkx/hlo/pass:hlo_pass_interface",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/strings",
    ],
)

zkx_cc_library(
    name = "hlo_memory_scheduler",
    srcs = ["hlo_memory_scheduler.cc"],
    hdrs = ["hlo_memory_scheduler.h"],
    deps = [
        "//xla/tsl/platform:numbers",
        "//xla/tsl/platform:statusor",
        "//zkx/hlo/analysis:hlo_alias_analysis",
        "//zkx/hlo/analysis:tuple_points_to_analysis",
        "//zkx/hlo/ir:hlo",
        "//zkx/hlo/pass:hlo_pass_interface",
        "//zkx/service:logical_buffer",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/status:statusor",
    ],
)

zkx_cc_library(
    name = "tuple_simplifier",
    srcs = ["tuple_simplifier.cc"],
    hdrs = ["tuple_simplifier.h"],
    deps = [
        "//xla/tsl/platform:errors",
        "//xla/tsl/platform:statusor",
        "//zkx:shape_util",
        "//zkx/hlo/ir:hlo",
        "//zkx/hlo/ir:hlo_opcode",
        "//zkx/hlo/pass:hlo_pass_interface",
    ],
)
